--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "vite-node": "^3.0.6",
     "zustand": "^5.0.3"
